# AvisSense

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
api/: main.py
docs/: merge_report.md  project_plan.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
model/: README.md
notebooks/: avis_sense_training.ipynb  metrics_report.ipynb
scripts/: evaluate.py  generate_metrics_plots.py  predict.py  push_model_to_hub.py  train.py
src/: __init__.py  evaluate.py  inference.py  predict.py  train.py  utils.py
tests/: test_api.py  test_inference.py
