[project]
name = "avis-sense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "transformers>=5.11.0",
    "uvicorn>=0.49.0",
]
